operator/pkg/gateway-api/testdata/gateway/listenerset-listenerset-with-reference-grant/input/listenerset-listenerset-with-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-listenerset-with-reference-grant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-with-reference-grant
  namespace: gateway-conformance-infra
  creationTimestamp: "2024-01-02T00:00:00Z"
spec:
  parentRef:
    name: gateway-listenerset-with-reference-grant
    namespace: gateway-conformance-infra
  listeners:
    - name: listenerset-with-reference-grant-listener
      port: 8443
      protocol: HTTPS
      hostname: with-grant.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-passthrough-checks-certificate
            namespace: gateway-conformance-app-backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: reference-grant-for-listenerset
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Secret
      name: tls-passthrough-checks-certificate
